syntax = "proto3";
package thisPackage;
option csharp_namespace = "Ding.Test";

message Maps
{
    map<string, string> dic = 1;
}

message AllType
{
    int32 id = 1;
    string name = 2;
    repeated int32 listInt = 3;
    repeated string listStr = 4;
    map<int32, int32> mapInt = 5;
    map<string, string> mapStr = 6;
    map<int32, string> mapIntStr = 7;
}
